[package]
name = "auto_learn"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8"
anyhow = "1"
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }
clap = { version = "4.5", features = ["derive", "env"] }
md5 = "0.7"
percent-encoding = "2.3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "cookies", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
url = "2.5"
uuid = { version = "1", features = ["v4"] }

[profile.release]
panic = "abort"
codegen-units = 16
lto = "thin"
opt-level = "z"
strip = true
